suppression des appel inutiles a l'api

--- a/src/app/resp/components/course-details-modal/course-details-modal.component.html
+++ b/src/app/resp/components/course-details-modal/course-details-modal.component.html
@@ -163,7 +163,8 @@
           formControlName="classroom"
           [options]="classrooms"
           optionLabel="label"
-          display="chip"
+          d
+          ²splay="chip"
           appendTo="body"
           placeholder="Sélectionnez une salle de classe"
         >
