--- a/src/app/resp/components/tp/tp.component.html
+++ b/src/app/resp/components/tp/tp.component.html
@@ -66,8 +66,8 @@
                 }"></i>
                         </td>
                         <td>
-                            <p-button (click)="menuStudents.toggle($event)" icon="pi pi-ellipsis-v" [rounded]="true"
-                                [text]="true" severity="secondary"></p-button>
+                            <p-button (click)="selectMenuStudent(student.id); menuStudents.toggle($event)"
+                                icon="pi pi-ellipsis-v" [rounded]="true" [text]="true" severity="secondary"></p-button>
                         </td>
                     </tr>
                 </ng-template>
