Supprimer TD OK

--- a/src/app/resp/components/td/td.component.html
+++ b/src/app/resp/components/td/td.component.html
@@ -130,6 +130,31 @@
                 </ng-template>
             </p-table>
         </p-tabPanel>
+        <p-tabPanel>
+            <ng-template pTemplate="header">
+                <div class="flex gap-2 align-items-center">
+                    <div>
+                        <span>Paramètres</span>
+                    </div>
+                </div>
+            </ng-template>
+
+            <div class="w-full">
+                <div class="flex" style="flex-direction: column;">
+                    <label for="group_name" class="pb-2" style="font-weight: 500;">Nom du TD</label>
+                    <input pInputText type="text" name="group_name" id="group_name" class="w-full"
+                        value="{{ TDInfo.name }}" [(ngModel)]="TDInfo.name" />
+                </div>
+
+                <div class="flex" style="flex-direction: column; margin-top: 30px;">
+                    <label for="delGroupBtn" style="font-weight: 500;" class="mb-2">Supprimer ce TD</label>
+                    <p-button (click)="confirmDeleteTD()" name="delGroupBtn" id="delGroupBtn" icon="pi pi-trash"
+                        severity="danger" label="Supprimer"></p-button>
+
+                </div>
+
+            </div>
+        </p-tabPanel>
     </p-tabView>
 </div>
 
@@ -153,3 +178,4 @@
         <p-button type="button" label="Ajouter" class="p-button-primary" (click)="addTP()"></p-button>
     </ng-template>
 </p-dialog>
+<p-confirmDialog header="Confirmation" icon="pi pi-exclamation-triangle"></p-confirmDialog>
