--- a/src/app/timetable/components/timetable-layout/timetable-layout.component.html
+++ b/src/app/timetable/components/timetable-layout/timetable-layout.component.html
@@ -4,6 +4,7 @@
       <p-dropdown [options]="promotions" (onChange)="onPromotionChange()" [(ngModel)]="selectedPromotionId" optionLabel="uniqueLabel"  placeholder="Sélectionnez une promotion"></p-dropdown>
       <p-dropdown [options]="teachers" (onChange)="onTeacherChange()" [(ngModel)]="selectedTeacherUsername" optionLabel="uniqueLabel2"  placeholder="Sélectionnez une professeur"></p-dropdown>
       <p-dropdown [options]="classrooms" (onChange)="onClasseroomChange()" [(ngModel)]="selectedClassroomName" optionLabel="uniqueLabel3"  placeholder="Sélectionnez une salle de classe"></p-dropdown>
+      <p-button label="MOI"></p-button>
       </div>
       <div class="flex justify-content-between align-items-center mt-2 mb-2">
         <div>
