--- a/src/app/resp/components/degree/degree.component.html
+++ b/src/app/resp/components/degree/degree.component.html
@@ -46,8 +46,8 @@
             </td>
             <td>{{ getStudentCountByPromotion(promotion.id) }}</td>
             <td>
-              <p-button (click)="menuStudents.toggle($event)" icon="pi pi-ellipsis-v" [rounded]="true" [text]="true"
-                severity="secondary "></p-button>
+              <p-button (click)="selectMenuPromotion(promotion); menuPromotions.toggle($event)" icon="pi pi-ellipsis-v"
+                [rounded]="true" [text]="true" severity="secondary "></p-button>
             </td>
           </tr>
         </ng-template>
@@ -141,3 +141,89 @@
 <ng-template #notSet><span class="font-italic">Aucun</span></ng-template>
 <p-toast></p-toast>
 <p-menu #menuStudents [model]="menuItemsStudents" [popup]="true" appendTo="body"></p-menu>
+<p-menu #menuPromotions [model]="menuItemsPromotions" [popup]="true" appendTo="body"></p-menu>
+
+
+<!-- Ajout du Modal (Dialogue) -->
+<p-dialog
+  header="Ajouter des étudiants à BUT {{ menuSelectedPromo?.level }} {{ degreeInfo.name }} {{ menuSelectedPromo?.year }}"
+  [(visible)]="isAddStudentsDialogVisible" [modal]="true" [responsive]="true"
+  [style]="{ width: '60vw', height: '70vh' }" [maximizable]="true">
+  <ng-template pTemplate="content">
+    <div class="flex gap-4">
+      <div style="height: auto; margin-top: -16px">
+        <nav class="menuStudentGroup">
+          <ul>
+            <li class="flex gap-2 active" [class.active]="selectedMenu === 'nopromotion'"
+              (click)="selectMenu('nopromotion')"><i class="pi pi-users"></i> Étudiants sans promotion</li>
+            <li class="flex gap-2" [class.active]="selectedMenu === 'all'" (click)="selectMenu('all')"><i
+                class="pi pi-users"></i> Tous les étudiants</li>
+          </ul>
+        </nav>
+      </div>
+      <div class="w-full">
+        <div class="studentsList">
+          <input type="text" pInputText [(ngModel)]="searchQuery" (ngModelChange)="filterStudents()" name="search-query"
+            class="search-query w-full mb-2" placeholder="Rechercher un étudiant...">
+
+          <p-table [value]="displayedStudents" [(selection)]="selectedStudents" [paginator]="true" [rows]="5"
+            paginatorDropdownAppendTo="body" [showCurrentPageReport]="true" [tableStyle]="{ 'min-width': '50rem' }"
+            currentPageReportTemplate="Affichage des entrées {first} à {last} sur {totalRecords} étudiants"
+            [rowsPerPageOptions]="[5, 10, 20]" (onRowSelect)="onRowSelect($event)"
+            (onRowUnselect)="onRowUnselect($event)">
+            <ng-template pTemplate="header">
+              <tr>
+                <th style="width: 4rem">
+                  <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
+                </th>
+                <th>Nom</th>
+                <th>Prénom</th>
+                <th>Apprenti</th>
+                <th>Promotion</th>
+                <th>TD</th>
+                <th>TP</th>
+              </tr>
+            </ng-template>
+            <ng-template pTemplate="body" let-student>
+              <tr>
+                <td>
+                  <p-tableCheckbox [value]="student"></p-tableCheckbox>
+                </td>
+                <td>{{student.last_name}}</td>
+                <td>{{student.first_name}}</td>
+                <td>
+                  <i class="pi" [ngClass]="{
+                          'pi-check-circle text-green-300': student.apprentice,
+                          'pi-times-circle text-red-300': !student.apprentice
+                        }"></i>
+                </td>
+                <td>
+                  <div *ngIf="student.degree_name; else notSet">BUT {{student.promotion_level}}
+                    {{student.degree_name}} {{student.promotion_year}}</div>
+                </td>
+                <td>
+                  <div *ngIf="student.td_name; else notSet">{{student.td_name}}</div>
+                </td>
+                <td>
+                  <div *ngIf="student.tp_name; else notSet">{{student.tp_name}}</div>
+                </td>
+              </tr>
+            </ng-template>
+            <ng-template pTemplate="emptymessage">
+              <tr>
+                <td colspan="7">Aucun étudiant.</td>
+              </tr>
+            </ng-template>
+          </p-table>
+        </div>
+      </div>
+    </div>
+  </ng-template>
+
+  <ng-template pTemplate="footer">
+    <p-button type="button" label="Annuler" [outlined]="true" severity="secondary" class="p-button-secondary"
+      (click)="isAddStudentsDialogVisible = false"></p-button>
+    <p-button type="button" label="Ajouter" class="p-button-primary" (click)="addStudents()"
+      [loading]="loading"></p-button>
+  </ng-template>
+</p-dialog>
