--- a/src/app/resp/components/degree/degree.component.html
+++ b/src/app/resp/components/degree/degree.component.html
@@ -123,8 +123,8 @@
               <ng-container *ngIf="student.tp[0]; else notSet">{{ student.tp[0].name }}</ng-container>
             </td>
             <td>
-              <p-button (click)="menuStudents.toggle($event)" icon="pi pi-ellipsis-v" [rounded]="true" [text]="true"
-                severity="secondary"></p-button>
+              <p-button (click)="selectMenuStudent(student.id); menuStudents.toggle($event)" icon="pi pi-ellipsis-v"
+                [rounded]="true" [text]="true" severity="secondary"></p-button>
             </td>
           </tr>
         </ng-template>
