--- a/src/app/resp/components/manage-courses/manage-courses.component.scss
+++ b/src/app/resp/components/manage-courses/manage-courses.component.scss
@@ -190,7 +190,7 @@
 
 /* Style au survol de la souris */
 .day-header:hover span {
-  color: #ff5733; /* Changez la couleur du texte au survol */
+  color: rgba(15, 15, 186, 0.746); /* Changez la couleur du texte au survol */
 }
 
 /* Style pour les boutons Précédent et Suivant */
