--- a/src/app/timetable/components/timetable-layout/timetable-layout.component.html
+++ b/src/app/timetable/components/timetable-layout/timetable-layout.component.html
@@ -5,12 +5,12 @@
       <p-dropdown [options]="teachers" (onChange)="onTeacherChange()" [(ngModel)]="selectedTeacherUsername" optionLabel="uniqueLabel2"  placeholder="Sélectionnez une professeur"></p-dropdown>
       <p-dropdown [options]="classrooms" (onChange)="onClasseroomChange()" [(ngModel)]="selectedClassroomName" optionLabel="uniqueLabel3"  placeholder="Sélectionnez une salle de classe"></p-dropdown>
       <p-button *ngIf="role=='enseignant' && !selectedUser" label="Mon emploi du temps" (onClick)="getTeacherCourses()"></p-button>
-      <p-button *ngIf="role=='étudiant'" label="Mon emploi du temps"></p-button>
+      <p-button *ngIf="role=='étudiant' && !selectedUser" label="Mon emploi du temps" (onClick)="getStudentCourses()"></p-button>
       </div>
       <div class="flex justify-content-between align-items-center mt-2 mb-2">
         <div>
           <span>{{ getWeekPeriod() }} </span>
-          <span *ngIf="selectedUser" style="font-weight: bold;"> Emploi du temps de {{ user }}</span>
+          <span *ngIf="selectedUser" style="font-weight: bold;"> Emploi du temps de {{ user.user.username }}</span>
         </div>
         <div>
           <p-button
