Bouton copier rectifier

--- a/src/app/resp/components/manage-courses/manage-courses.component.html
+++ b/src/app/resp/components/manage-courses/manage-courses.component.html
@@ -82,9 +82,10 @@
             (click)="clearCopiedEvents()"
             label="Vider la copie"
             class="clear-button"
+            severity="danger"
           ></p-button>
           <p-button
-            [icon]="'pi pi-paste'"
+            [icon]="'pi pi-file'"
             (click)="pasteEventsFromClipboard()"
             label="Coller les cours"
             class="paste-button"
