--- a/src/app/dashboard/components/dashboard-home/dashboard-home.component.scss
+++ b/src/app/dashboard/components/dashboard-home/dashboard-home.component.scss
@@ -2,49 +2,45 @@ body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
-    height: 100vh; /* Utilisation de 100% de la hauteur de la vue */
+    height: 100vh;
+    flex: 1;
+    justify-content: space-between;
 }
 
-/* Section principale occupant 100% de la largeur */
 .dashboard-home {
     display: flex;
-    width: 100%;
-    height: 100%; /* Utilisation de 100% de la hauteur de la vue */
 }
 
-/* Première section avec deux sous-sections */
 .dashboard {
     display: flex;
     flex-direction: column;
-    flex: 1; /* Utilisation de tout l'espace disponible */
+    flex: 1; 
+    width: 100%;
+    height: 100%;
 }
 
-/* Sous-section contenant 3 cards */
 .dashboard-values:nth-child(1) {
     display: flex;
-    flex-wrap: wrap; /* Permet aux cards de passer à la ligne si nécessaire */
+    flex-wrap: wrap; 
 }
 
-/* Sous-section contenant 2 grands panels */
 .dashboard-values:nth-child(2) {
     display: flex;
-    flex-direction: row; /* Disposer les panels côte-à-côte */
-    height: 100%; /* Utilisation de 100% de la hauteur de la vue */
+    flex-direction: row;
 }
 
-/* Chaque card ou panel dans les sous-sections */
 .card-item, .dashboard-values p-panel {
-    flex: 1; /* Utilisation de tout l'espace disponible */
+    flex: 1; 
     margin: 8px;
 }
 
-/* Deuxième section occupant 30% de la largeur */
+
 p-panel:nth-child(2) {
     width: 30%;
 }
 
 .dashboard-values {
-    flex: 1; /* Utilisation de tout l'espace disponible */
+    flex: 1; 
     margin: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -52,20 +48,46 @@ p-panel:nth-child(2) {
 }
 
 .card-item, p-panel {
-    flex: 1; /* Utilisation de tout l'espace disponible */
+    flex: 1; 
     background-color: #ecf0f1;
     border: 1px solid #bdc3c7;
     border-radius: 5px;
     padding: 10px;
 }
 
+p-header {
+    font-weight: bold;
+}
+
+.pi-user-minus {
+    padding: 5px;
+    background: #fdd0d0;
+    border-radius: 5px;
+}
+
+.pi-bell {
+    padding: 5px;
+    background: #d0d0ff;
+    border-radius: 5px;
+}
+
 .red-500 {
-    color: #ff0000; /* Rouge */
+    color: #ff0000; 
+}
+
+.red-absence:hover {
+    background: #fdd0d0;
+    border-radius: 5px;
 }
 
 .blue-500 {
-    color: #0000ff; /* Rouge */
+    color: #0000ff; 
 }
+
+.blue-reminder:hover {
+    background: #d0d0ff;
+    border-radius: 5px;
+  }
 
 .resource-name {
     font-weight: bold;
