--- a/src/app/teacher/components/callroll/callroll.component.html
+++ b/src/app/teacher/components/callroll/callroll.component.html
@@ -1,14 +1,12 @@
-<div class="">
-    <div>
+<div class="flex gap-5">
+    <div style="width:20%">
         <mwl-calendar-day-view [viewDate]="viewDate" [events]="events" [dayStartHour]="dayStartHour"
             [dayEndHour]="dayEndHour" [hourSegments]="hourSegments" [eventTitleTemplate]="customEventTitleTemplate"
             (eventClicked)="handleEventClick($event.event)">
         </mwl-calendar-day-view>
     </div>
 
-    <div>
-
-    </div>
+    <div style="background-color: lightgray; width: 1000px"></div>
 </div>
 
 <ng-template class="custom-event-title" #customEventTitleTemplate let-event="event">
